otimizando algumas coisas

--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
     <title>ChristopherFifo</title>
   </head>
   <body class="tema">
+
+    <!-- começo da saidbar -->
+
     <div class="contencao">
       <nav class="menu-lateral tema" >
+
+        <!-- icone do perfil -->
+
         <div class="btn-expandir tema">
           <i class="fa-solid fa-user" id="btn-exp"></i>
         </div>
+
+        <!-- links externos -->
 
         <ul>
           <li class="item-menu tema">
@@ -59,6 +67,9 @@
               <span class="txt-link">Email</span>
             </a>
           </li>
+
+          <!-- tag existente somente no celular -->
+
           <li class="item-menu tema gambi">
             <a href="https://api.whatsapp.com/send?phone=5511991973295" target="_blank">
               <span class="icon"><i class="fa-brands fa-whatsapp"></i></span>
@@ -66,6 +77,8 @@
             </a>
           </li>
         </ul>
+
+        <!-- mudança de idioma -->
 
         <div class="lingua">
           <input class="checkbox" type="checkbox" id="chk">
@@ -76,12 +89,19 @@
           </label>
         </div>
 
+        <!-- mudança de tema -->
+
         <i id="mode_icon" class="fa-solid fa-moon"></i>
       </nav>
     </div>
 
+    <!-- corpo principal da pagina -->
+
     <main class="principal">
       <article id="top">
+
+        <!-- cabeçalho -->
+
         <header class="tema" id="header">
           <nav>
             <ul class="lista">
@@ -93,6 +113,8 @@
             </ul>
           </nav>
 
+          <!-- botão para expandir o menu só no celular -->
+
           <div class="tentativa tema"><i class="fa-solid fa-bars"></i></div>
 
         </header>
@@ -100,13 +122,16 @@
         <div class="flutuante jesus"><a href="https://api.whatsapp.com/send?phone=5511991973295" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></div>
         <div class="flutuante amem"><a href="#top"><i class="fa-solid fa-arrow-up"></i></a></div>
 
+<!-- slider -->
+
         <div class="slider">
 
-
           <div class="list">
+
+            <!-- informações que iram aparecer -->
   
               <div class="item">
-                  <img src="./imagens/gif-projeto1.gif">
+                  <img src="./imagens/gif-projeto1.gif" alt="logo-conteudo">
   
                   <div class="content">
                       <div class="title">TELA DE LOGIN</div>
@@ -120,8 +145,7 @@
               </div>
   
               <div class="item">
-                <img src="./imagens/gif-bd.gif">
-  
+                <img src="./imagens/gif-bd.gif" alt="logo-conteudo">
                   <div class="content">
                       <div class="title">ESTACIONAMENTO</div>
                       <div class="type tema">BACK-END</div>
@@ -134,7 +158,7 @@
               </div>
   
               <div class="item">
-                <img src="./imagens/gif-ia.gif">  
+                <img src="./imagens/gif-ia.gif" alt="logo-conteudo">  
                   <div class="content">
                       <div class="title">CANCELAMENTOS</div>
                       <div class="type tema">CIÊCIA-DADOS</div>
@@ -147,7 +171,7 @@
               </div>
   
               <div class="item">
-                <img src="./imagens/gif-projeto4.gif">
+                <img src="./imagens/gif-projeto4.gif" alt="logo-conteudo">
                   <div class="content">
                       <div class="title">SCORE BANCO</div>
                       <div class="type tema">IA</div>
@@ -161,61 +185,65 @@
   
           </div>
   
+          <!-- cartões das proximas paginas -->
   
           <div class="thumbnail">
   
               <div class="item">
-                <img src="./imagens/gif-projeto1.gif">
+                <img src="./imagens/gif-projeto1.gif" alt="logo-conteudo">
               </div>
               <div class="item">
-                <img src="./imagens/gif-bd.gif">
+                <img src="./imagens/gif-bd.gif" alt="logo-conteudo">
               </div>
               <div class="item">
-                <img src="./imagens/gif-ia.gif">
+                <img src="./imagens/gif-ia.gif" alt="logo-conteudo">
               </div>
               <div class="item">
-                <img src="./imagens/gif-projeto4.gif">
+                <img src="./imagens/gif-projeto4.gif" alt="logo-conteudo">
               </div>
   
           </div>
   
+          <!-- botões -->
   
           <div class="nextPrevArrows tema">
               <button class="prev"> < </button>
               <button class="next"> > </button>
           </div>
-  
-  
       </div>
 
       </article>
+
+      <!-- conteudos -->
 
       <section class="habili tema">
         <h1 id="sob" class="titulo tema">Habilidades</h1>
         <div class="espaco">
         <p class="servico tema">Olá, meu nome é Christopher Willians Silva Couto e sou um desenvolvedor apaixonado por tecnologia. Com cerca de um ano de experiência em programação, tenho me dedicado especialmente às áreas de fullstack, inteligência artificial (IA) e ciência de dados. Meu objetivo é criar soluções inovadoras e eficientes que atendam às necessidades específicas dos clientes, utilizando tecnologias modernas e práticas recomendadas. Estou sempre buscando aprender e evoluir, garantindo que cada projeto seja não apenas funcional, mas também robusto e adaptável às demandas do mercado. Estou à disposição para discutir como podemos colaborar para alcançar seus objetivos tecnológicos de forma eficaz e criativa.</p>
-          <img src="./imagens/chris.jpg" class="img-chris">
+          <img src="./imagens/chris.jpg" class="img-chris" alt="imagem de perfil">
         </div>
+
+        <!-- logos das tecnologias -->
 
           <div class="logos">
             <div class="peixe">
-              <img class="img-logo" src="./imagens/html.png">
-              <img class="img-logo" src="./imagens/css.png">
-              <img class="img-logo" src="./imagens/javascript.png">
-              <img class="img-logo" src="./imagens/react.png">
-              <img class="img-logo" src="./imagens/typescript.png">
-              <img class="img-logo" src="./imagens/nodejs.png">
-              <img class="img-logo" src="./imagens/python.png">
-              <img class="img-logo" src="./imagens/c.png">
-              <img class="img-logo" src="./imagens/c++.png">
-              <img class="img-logo" src="./imagens/csharp.png">
-              <img class="img-logo" src="./imagens/sql.png">
-              <img class="img-logo" src="./imagens/mysql.png">
-              <img class="img-logo" src="./imagens/nosql.png">
-              <img class="img-logo" src="./imagens/git.png">
-              <img class="img-logo" src="./imagens/express-js.png">
-              <img class="img-logo" src="./imagens/figma.png">
-              <img class="img-logo" src="./imagens/net.png">
+              <img class="img-logo" src="./imagens/html.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/css.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/javascript.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/react.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/typescript.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/nodejs.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/python.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/c.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/c++.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/csharp.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/sql.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/mysql.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/nosql.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/git.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/express-js.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/figma.png" alt="imagem-logo">
+              <img class="img-logo" src="./imagens/net.png" alt="imagem-logo">
             </div>
           </div>
       </section>
@@ -235,6 +263,7 @@
               em equipe, sempre buscando aprender e colaborar em novos projetos.
             </p>
 
+            <!-- video e tabela de disciplinas -->
 
           <iframe
             class="video"
@@ -317,7 +346,11 @@
         </table>
       </section>
 
+<!-- seção de entregas -->
+
       <section class="entregas tema" id="cont">
+
+        <!-- botões das abas -->
 
         <div class="tab-buttons">
             <button class="tab-btn active tema" content-id="sites">
@@ -341,6 +374,8 @@
             </button>
 
         </div>
+
+        <!-- conteudo de cada aba -->
 
             <div class="conteudo tema" id="sites">
                 <img src="./imagens/gif front.gif" class="content-img" >
@@ -389,9 +424,13 @@
 
     </section>
 
+    <!-- seção de projetos -->
+
       <section class="projetos tema" id="proj">
 
         <h1 class="titulo tema">Projetos</h1>
+
+        <!-- filtro de temas -->
 
         <nav class="filtro tema"> 
           <ul>
@@ -421,6 +460,8 @@
              
 <ul class="navegacao tema">
 
+  <!-- cartões dos projetos -->
+
   <li class="cartoes tema" >
       <a href="https://christopherfifo.github.io/login-dark-and-light/" target="_blank"><h1 class="titulo tema item-title"><i class="fa-solid fa-link"></i>Tela de login</h1></a>
       <img src="./imagens/login.png">
@@ -436,6 +477,9 @@
       <button class="visualizar tema">Saiba mais</button>
       <i class="fa-regular fa-heart star tema" id="coracao"></i>
       </div>
+
+      <!-- informações detalhadas -->
+
       <div id="span" class="janela">
           <div class="tudo-proj">
               <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -463,6 +507,9 @@
     <button class="visualizar tema">Saiba mais</button>
     <i class="fa-regular fa-heart star tema" id="coracao"></i>
     </div>
+    
+      <!-- informações detalhadas -->
+
     <div id="span" class="janela">
         <div class="tudo-proj">
             <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -488,6 +535,9 @@
   <button class="visualizar tema">Saiba mais</button>
   <i class="fa-regular fa-heart star tema" id="coracao"></i>
   </div>
+  
+      <!-- informações detalhadas -->
+
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -516,6 +566,9 @@
   <button class="visualizar tema">Saiba mais</button>
   <i class="fa-regular fa-heart star tema" id="coracao"></i>
   </div>
+  
+      <!-- informações detalhadas -->
+
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -541,6 +594,9 @@
   <button class="visualizar tema">Saiba mais</button>
   <i class="fa-regular fa-heart star tema" id="coracao"></i>
   </div>
+  
+      <!-- informações detalhadas -->
+
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -567,6 +623,9 @@
   <button class="visualizar tema">Saiba mais</button>
   <i class="fa-regular fa-heart star tema" id="coracao"></i>
   </div>
+  
+      <!-- informações detalhadas -->
+
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -593,6 +652,9 @@
   <button class="visualizar tema">Saiba mais</button>
   <i class="fa-regular fa-heart star tema" id="coracao"></i>
   </div>
+  
+      <!-- informações detalhadas -->
+
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -618,6 +680,9 @@
   <button class="visualizar tema">Saiba mais</button>
   <i class="fa-regular fa-heart star tema" id="coracao"></i>
   </div>
+  
+      <!-- informações detalhadas -->
+
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -645,6 +710,9 @@
   <button class="visualizar tema">Saiba mais</button>
   <i class="fa-regular fa-heart star tema" id="coracao"></i>
   </div>
+  
+      <!-- informações detalhadas -->
+
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -670,6 +738,9 @@
   <button class="visualizar tema">Saiba mais</button>
   <i class="fa-regular fa-heart star tema" id="coracao"></i>
   </div>
+  
+      <!-- informações detalhadas -->
+
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
@@ -682,11 +753,15 @@
   </div> 
 </li>
 
+<!-- mensagem caso não tenha arquivo -->
+
 <li id="no_results">
   <h1 class="tema">Nenhum resultado encontrado</h1>
 </li>
   </ul>
       </section>
+
+      <!-- informações adicionais -->
 
       <footer>
         <h1>Christopher Willians Silva Couto</h1>
