--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
   <li class="cartoes tema" >
       <a href="https://christopherfifo.github.io/login-dark-and-light/" target="_blank"><h1 class="titulo tema item-title"><i class="fa-solid fa-link"></i>Tela de login</h1></a>
-      <img src="./imagens/login.png">
+      <img src="./imagens/login.png" alt="login">
       <section>
         <p class="item-description">
           html css javascript Front-End
@@ -483,7 +483,7 @@
       <div id="span" class="janela">
           <div class="tudo-proj">
               <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
-              <img src="./imagens/login-dark.png" />
+              <img src="./imagens/login-dark.png" alt="login"/>
               <div class="info-proj">
                   <h1 class="titulo ">Tela de login</h1>
                   <P>Projeto de uma tela de login criada com HTML, JavaScript e CSS. Inclui funcionalidades de ocultar senha para maior segurança e a opção de mudança de tema para personalização visual. É uma solução prática para autenticação de usuários. </br></br> <a href="https://github.com/christopherfifo/login-dark-and-light" target="_blank">Acessar repositorio</a></P>
@@ -494,7 +494,7 @@
 
   <li class="cartoes tema" >
     <a href="https://christopherfifo.github.io/pokedex/" target="_blank"><h1 class="titulo tema item-title"><i class="fa-solid fa-link"></i>Pokedex</h1></a>
-    <img src="./imagens/pokedex.png">
+    <img src="./imagens/pokedex.png" alt="pokedex">
     <section>
       <p class="item-description">
         html css javascript Front-End
@@ -513,7 +513,7 @@
     <div id="span" class="janela">
         <div class="tudo-proj">
             <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
-            <img src="./imagens/pokedex2.png" />
+            <img src="./imagens/pokedex2.png" alt="pokedex" />
             <div class="info-proj">
                 <h1 class="titulo">Pokedex</h1>
                 <P>Pokédex interativa desenvolvida com HTML, JavaScript e CSS. Exibe os Pokémon e seus respectivos números na Pokédex, proporcionando uma interface amigável e informativa. Ideal para fãs que desejam explorar os detalhes dos Pokémon. </br></br> <a href="https://github.com/christopherfifo/pokedex" target="_blank">Acessar repositorio</a></P>
@@ -553,7 +553,7 @@
 
 <li class="cartoes tema" >
   <a href="https://christopherfifo.github.io/Gerador-de-senhas/" target="_blank"><h1 class="titulo tema item-title"><i class="fa-solid fa-link"></i>Gerador de Senhas</h1></a>
-  <img src="./imagens/gerador.png">
+  <img src="./imagens/gerador.png" alt="gerador">
   <section>
     <p class="item-description">
       html css javascript Front-End
@@ -572,7 +572,7 @@
   <div id="span" class="janela">
       <div class="tudo-proj">
           <i id="p_fechar" class="fa-solid fa-circle-xmark p_fechar"></i>
-          <img src="./imagens/gerador2.png" />
+          <img src="./imagens/gerador2.png" alt="gerador"/>
           <div class="info-proj">
               <h1 class="titulo">Gerador de senhas</h1>
               <P>Ferramenta desenvolvida com HTML, JavaScript e CSS que permite gerar senhas aleatórias conforme o tamanho definido pelo usuário. Garante a criação de senhas seguras e personalizadas, melhorando a segurança digital. </br></br> <a href="https://github.com/christopherfifo/Gerador-de-senhas" target="_blank">Acessar repositorio</a></P>
