--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
           <!-- botão para expandir o menu só no celular -->
 
-          <div class="tentativa tema"><i class="fa-solid fa-bars"></i></div>
+          <button class="tentativa tema"><i class="fa-solid fa-bars"></i></button>
 
         </header>
 
@@ -152,7 +152,7 @@
                       <div class="description">
                         Sistema desenvolvido em C# que calcula o valor do estacionamento com base nas horas. Permite adicionar, listar, remover e mostrar veículos pelas placas, facilitando a gestão e controle de estacionamento.                      </div>
                       <div class="button tema">
-                          <button><a href="https://github.com/christopherfifo/trilha-net-fundamentos-desafio">VER MAIS</a></button>
+                          <button><a href="https://github.com/christopherfifo/trilha-net-fundamentos-desafio" target="_blank">VER MAIS</a></button>
                       </div>
                   </div>
               </div>
@@ -165,7 +165,7 @@
                       <div class="description">
                         Análise de dados realizada com Python e Jupyter que utiliza gráficos para demonstrar o perfil dos clientes que mais cancelam os planos da empresa, oferecendo insights valiosos para estratégias de retenção.                      </div>
                       <div class="button tema">
-                        <button><a href="https://github.com/christopherfifo/taxa-de-cancelamento">VER MAIS</a></button>
+                        <button><a href="https://github.com/christopherfifo/taxa-de-cancelamento" target="_blank">VER MAIS</a></button>
                       </div>
                   </div>
               </div>
@@ -178,7 +178,7 @@
                       <div class="description">
                         Inteligência Artificial criada com Python e Jupyter que calcula o score bancário dos clientes e identifica quem tem o maior score, ajudando a determinar os clientes mais promissores.                      </div>
                       <div class="button tema">
-                        <button><a href="https://github.com/christopherfifo/ia-para-calcular-score-banc-rio">VER MAIS</a></button>
+                        <button><a href="https://github.com/christopherfifo/ia-para-calcular-score-banc-rio" target="_blank">VER MAIS</a></button>
                       </div>
                   </div>
               </div>
